# DuckStation

./: .clang-format  CMakeLists.txt  duckstation.sln
CMakeModules/: DuckStationUtils.cmake
data/resources/: discdb.yaml  gamedb.yaml
dep/: CMakeLists.txt
dep/imgui/src/: imgui.cpp  imgui_widgets.cpp
dep/rapidyaml/: CMakeLists.txt  rapidyaml.vcxproj  rapidyaml.vcxproj.filters
scripts/: build-dependencies-mac.sh
src/common/: CMakeLists.txt  align.h  common.props  common.vcxproj  common.vcxproj.filters  file_system.cpp  gsvector.h  gsvector_neon.h  gsvector_sse.h  heterogeneous_containers.h  intrin.h  rectangle.h  threading.cpp  threading.h  types.h
src/core/: CMakeLists.txt  achievements.cpp  bios.cpp  bios.h  bus.cpp  bus.h  core.props  core.vcxproj  core.vcxproj.filters  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_newrec.cpp  cpu_newrec.h  cpu_newrec_compiler.cpp  cpu_newrec_compiler.h  cpu_newrec_compiler_aarch32.cpp  cpu_newrec_compiler_aarch64.cpp  cpu_newrec_compiler_aarch64.h  cpu_newrec_compiler_riscv64.cpp  cpu_newrec_compiler_riscv64.h  cpu_newrec_compiler_x64.cpp  cpu_newrec_compiler_x64.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator_x64.cpp  cpu_stack_walk.cpp  cpu_stack_walk.h  fullscreen_ui.cpp  game_database.cpp  game_database.h  gpu.cpp  gpu.h  gpu_backend.cpp  gpu_backend.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw.h  gpu_hw_backend.cpp  gpu_hw_backend.h  (+38 more)
src/core/gpu/: d3d11_device.cpp  d3d11_device.h  d3d11_gpu_device.cpp  d3d11_gpu_device.h  d3d11_pipeline.cpp  d3d11_pipeline.h  d3d11_shader.cpp  d3d11_shader.h  d3d11_texture.cpp  d3d11_texture.h  d3d12_builders.h  d3d12_device.cpp  d3d12_device.h  d3d12_gpu_device.cpp  d3d12_gpu_device.h  d3d12_pipeline.cpp  d3d12_pipeline.h  d3d12_texture.cpp  d3d12_texture.h  d3d_common.cpp  d3d_common.h  d3d_shaders.h  gpu_device.cpp  gpu_device.h  gpu_pipeline.h  gpu_shader.h  gpu_shader_cache.cpp  gpu_shader_cache.h  gpu_texture.cpp  gpu_texture.h  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  metal_device.h  metal_device.mm  metal_stream_buffer.h  metal_stream_buffer.mm  opengl_device.cpp  (+27 more)
src/core/gpu/d3d11/: shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h  stream_buffer.cpp  stream_buffer.h  texture.cpp  texture.h
src/core/gpu/d3d12/: context.cpp  context.h  descriptor_heap_manager.cpp  descriptor_heap_manager.h  shader_cache.cpp  shader_cache.h  staging_texture.cpp  staging_texture.h  stream_buffer.cpp  stream_buffer.h  texture.cpp  texture.h  util.cpp  util.h
src/core/gpu/gl/: context.cpp  context.h  context_egl.cpp  context_glx.cpp  context_wgl.cpp  context_wgl.h  program.cpp  program.h  shader_cache.cpp  shader_cache.h  stream_buffer.cpp  stream_buffer.h  texture.cpp  texture.h  x11_window.h
src/core/gpu/vulkan/: builders.cpp  builders.h  context.cpp  context.h  loader.h  shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h  stream_buffer.cpp  stream_buffer.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  util.cpp  util.h
src/duckstation-nogui/: nogui_host.cpp  nogui_platform.h  vty_nogui_platform.cpp  win32_nogui_platform.cpp  win32_nogui_platform.h  x11_nogui_platform.cpp
src/duckstation-qt/: CMakeLists.txt  debuggermodels.cpp  debuggermodels.h  debuggerwindow.cpp  debuggerwindow.h  debuggerwindow.ui  displaysettingswidget.cpp  displaywidget.h  gamesummarywidget.cpp  mainwindow.cpp  mainwindow.h  postprocessingchainconfigwidget.cpp  postprocessingchainconfigwidget.h  postprocessingsettingswidget.cpp  postprocessingshaderconfigwidget.h  qthost.cpp  qthost.h  qtutils.h
src/duckstation-regtest/: regtest_host.cpp  regtest_host_display.cpp  regtest_host_display.h
src/frontend-common/: CMakeLists.txt  achievements.cpp  common_host.cpp  common_host.h  cubeb_audio_stream.cpp  frontend-common.vcxproj  frontend-common.vcxproj.filters  fullscreen_ui.cpp  game_list.cpp  imgui_fullscreen.cpp  imgui_manager.cpp  imgui_overlays.cpp  input_manager.h
src/util/: d3d11_device.cpp  d3d11_device.h  d3d11_texture.cpp  d3d12_device.cpp  gpu_device.cpp  gpu_device.h  imgui_manager.cpp  metal_device.mm  opengl_context.cpp  opengl_device.cpp  opengl_pipeline.cpp  postprocessing.cpp  postprocessing.h  postprocessing_shader.h  postprocessing_shader_fx.cpp  postprocessing_shader_fx.h  postprocessing_shader_glsl.cpp  postprocessing_shader_glsl.h  shadergen.cpp  shadergen.h  vulkan_device.cpp
